<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>gmapping</name>
  <version>1.3.8</version>
  <description>This package contains a ROS wrapper for OpenSlam's Gmapping. 
  The gmapping package provides laser-based SLAM (Simultaneous Localization and Mapping), 
  as a ROS node called slam_gmapping. Using slam_gmapping, you can create a 2-D occupancy
  grid map (like a building floorplan) from laser and pose data collected by a mobile robot.
  </description>
  <author>Brian Gerkey</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>ros2_time</build_depend>
  <build_depend>ros2_console</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>openslam_gmapping</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros2_time</exec_depend>
  <exec_depend>ros2_console</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
